<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_editar"
            android:icon="@drawable/editar"
            android:title="@string/menu_editar" />
        <item
            android:id="@+id/nav_reservar"
            android:icon="@drawable/item"
            android:title="@string/menu_reservar" />
        <item
            android:id="@+id/nav_clase"
            android:icon="@drawable/item"
            android:title="@string/menu_clase" />
        <item
        android:id="@+id/nav_horario"
        android:icon="@drawable/item"
        android:title="@string/menu_horario" />
        <item
            android:id="@+id/nav_ejercicio"
            android:icon="@drawable/item"
            android:title="@string/menu_ejercicio" />
    </group>
</menu>